--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <html>
-    <head>
-        <h1>Projeto Matheus</h1>
-    </head>
-    <body>
 
-    </body>
+	<head>
+        <meta charset="UTF-8"/>
+        <link rel="stylesheet" type="text/css" href="/design.css"/>
+	</head>
+
+	<body>
+		<h1>Git</h1>
+		<h2>Alterando o titulo</h2>
+		
+		<ul>
+			<li>Fazer backup do seu projeto nao e o bastante para desfazer 
+			alteracoes com seguranca e eficiencia</li>
+			
+			<li>Experimente solucoes alternativas em seu codigo sem arriscar 
+			a integridade do seu projeto</li>
+			<li>Varias copias do mesmo ambiente, cada um com uma alteracao 
+			do sistema</li>
+			
+			<li>E tudo isso sem precisar de conexao com a internet</li>
+		</ul>
+	</body>
+
 </html>
